--- a/.github/workflows/ci-label-triggered.yml
+++ b/.github/workflows/ci-label-triggered.yml
@@ -2,7 +2,7 @@ name: Triggered Workflow
 
 on:
   pull_request:
-    types: [ "labeled" ]
+    types: [ "labeled", "synchronize" ]
 
 jobs:
   build-idris:
